--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Pierce Purselley
 
 # Short bio or description (displayed in the header)
-description: Data Scientist
+description: Pepperdine MBA | Applied Analytics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: www.linkedin.com/in/pierce-purselley
 
 #
 # Flags below are optional
