--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Pierce Purselley
 description: Pepperdine MBA | Applied Analytics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: www.linkedin.com/in/pierce-purselley
+avatar: https://www.linkedin.com/in/pierce-purselley
 
 #
 # Flags below are optional
